# e-canteen-all

./: .gitignore
e-canteen/: app.json  package-lock.json  package.json
e-canteen-backend/: main.py  models.py  pyproject.toml  schema.py
e-canteen/app/: _layout.tsx  updatestatus.tsx
e-canteen/app/(tabs)/: _layout.tsx  index.tsx  signup.tsx
e-canteen/app/(tabs)/admin/: _layout.tsx  addfood.tsx  index.tsx
e-canteen/app/(tabs)/student/: _layout.tsx  index.tsx  pastorders.tsx  two.tsx
e-canteen/components/: AddorMultiple.tsx
e-canteen/context/: FoodContext.ts  FoodItems.ts
